<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_Picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/btn_choosePicture"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/btn_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/choose_picture"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_Picture"
        android:layout_marginTop="20dp"
        android:textColor="@color/selector_text_color"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_zoomUp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/zoom_up"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_zoomDown"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/zoom_down"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_turnLeft"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/turn_left"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_turnRight"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/turn_right"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lightUp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/light_up"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_lightDown"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/light_down"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_contrastUp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/contrast_up"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_contrastDown"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/contrast_down"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_saturationUp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/saturation_up"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_saturationDown"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/saturation_down"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_mirrorX"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/mirror_x"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_mirrorY"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/mirror_y"
                android:textColor="@color/selector_text_color"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>