<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/input_name"
            android:textColor="@color/green"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:hint="@string/hint_sd_card"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green" />

    <RelativeLayout
        android:id="@+id/rl_sdCard"
        style="@style/Item">

        <TextView
            style="@style/TextTitle"
            android:text="@string/sd_card" />

        <TextView
            style="@style/ItemGoTo"
            android:text="@string/go_to" />

    </RelativeLayout>

    <ImageView style="@style/Line" />

    <RelativeLayout
        android:id="@+id/rl_mediaStore"
        style="@style/Item">

        <TextView
            style="@style/TextTitle"
            android:text="@string/media_store" />

        <TextView
            style="@style/ItemGoTo"
            android:text="@string/go_to" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_down_bg"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>