<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.llf.mybitmapapp.EditBitmapActivity">

    <RelativeLayout
        android:id="@+id/rl_topBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/green"
        android:layout_alignParentTop="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_bitmap"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_topBar"
        android:layout_above="@+id/ll_edit"
        android:scaleType="fitCenter"
        />

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_editInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:text="@string/edit_info"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="@color/green" />

            <Button
                android:id="@+id/btn_editCombine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:text="@string/edit_combine"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="@color/green" />

            <Button
                android:id="@+id/btn_editSaturation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/item_bg"
                android:text="@string/edit_saturation"
                android:textColor="@color/white" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_editRotate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/item_bg"
                android:text="@string/edit_rotate"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="@color/green" />

            <Button
                android:id="@+id/btn_editZoom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:text="@string/edit_zoom"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:src="@color/green" />

            <Button
                android:id="@+id/btn_editLight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/item_bg"
                android:text="@string/edit_light"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_edit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:text="@string/exif"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_aperture"/>
            <TextView
                android:id="@+id/tv_aperture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_datetime"/>
            <TextView
                android:id="@+id/tv_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_exposure_time"/>
            <TextView
                android:id="@+id/tv_exposureTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_flash"/>
            <TextView
                android:id="@+id/tv_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_focal_length"/>
            <TextView
                android:id="@+id/tv_focalLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_image_length"/>
            <TextView
                android:id="@+id/tv_imageLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_image_width"/>
            <TextView
                android:id="@+id/tv_imageWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_iso"/>
            <TextView
                android:id="@+id/tv_iso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_make"/>
            <TextView
                android:id="@+id/tv_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_model"/>
            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/tag_orientation"/>
            <TextView
                android:id="@+id/tv_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="@string/default_str"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
